# atom_it

./: .gitignore  AlgorithmAtom.cpp  FRNN.cpp  FRNN.h  Makefile  Sort.cpp  Sort.h  Stopwatch.cpp  Stopwatch.h  listwork.txt  sort_2017.cpp  string_search.cpp
OpenCVAtom/: .gitignore  CMakeLists.txt  DisplayImage.cpp  SaveImage.cpp  mat_basic.cpp
OpenCVAtom/BlendingImage/: BlendingImage  CMakeLists.txt  blending_image.cpp
OpencvTutorial/: app.txt
OpencvTutorial/Apps/TextRecognition/: CMakeLists.txt  blendingtest.cpp  morphology_test.cpp  test.cpp  textdetection.cpp  textrecog.cpp
OpencvTutorial/Apps/TextRecognition/src/: main.cpp
OpencvTutorial/Apps/TextRecognition/src/app/impl/: C2DFilterApp.cpp  C2DFilterApp.h  CBackProjectApp.cpp  CBackProjectApp.h  CBoundingBoxesApp.cpp  CBoundingBoxesApp.h  CCVCoreApp.cpp  CCVCoreApp.h  CCannyEdgeApp.cpp  CCannyEdgeApp.h  CConvexHullApp.cpp  CConvexHullApp.h  CFindingContoursApp.cpp  CFindingContoursApp.h  CHistogramApp.cpp  CHistogramApp.h  CImageSegmentationApp.cpp  CImageSegmentationApp.h  CLaplaceApp.cpp  CLaplaceApp.h  CRemapApp.cpp  CRemapApp.h  CTemplateMatchingApp.cpp  CTemplateMatchingApp.h
OpencvTutorial/Apps/TextRecognition/src/app/impl/fundamental/opencv/: CCVCore.cpp  CCVCore.h
OpencvTutorial/Apps/TextRecognition/src/app/interface/: IApplication.h  ILaplacePlayerApp.h
OpencvTutorial/Apps/TextRecognition/src/app/interface/fundamental/opencv/: ICVCore.h  ICVStd.h  IMorphology.h  ITemplateMatching.h
OpencvTutorial/Apps/TextRecognition/test/convexhull/: convex.txt
OpencvTutorial/Imgprocessing/: .gitignore
(+85 files in other folders)
